--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,56 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic==2.5.3
-python-dotenv==1.0.0
-# epitran has Python 3.10+ requirement, will add in Phase 2
-# epitran==1.24
-langdetect==1.0.9
+annotated-types==0.7.0
 anthropic==0.69.0
+anyio==4.11.0
+certifi==2025.10.5
+charset-normalizer==3.4.3
+click==8.1.8
+Deprecated==1.2.18
+distro==1.9.0
+docstring_parser==0.17.0
+editdistance==0.8.1
+epitran==1.24
+exceptiongroup==1.3.0
+fastapi==0.109.0
+filelock==3.19.1
+fsspec==2025.9.0
 gTTS==2.5.0
-# Optional but recommended
+h11==0.16.0
+hf-xet==1.1.10
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.35.3
+idna==3.10
+jiter==0.11.0
+langdetect==1.0.9
+limits==4.2
+marisa-trie==1.3.1
+munkres==1.1.4
+numpy==2.0.2
+packaging==24.2
+pandas==2.3.3
+panphon==0.22.2
+pydantic==2.5.3
+pydantic_core==2.14.6
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
 python-multipart==0.0.6
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.9.18
+requests==2.32.5
+six==1.17.0
+slowapi==0.1.9
+sniffio==1.3.1
+starlette==0.35.1
+tokenizers==0.22.1
+tqdm==4.67.1
+typing_extensions==4.15.0
+tzdata==2025.2
+unicodecsv==0.14.1
+urllib3==2.5.0
+uvicorn==0.27.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
+wrapt==1.17.3
