Add enhanced health check with email alerts

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,3 +2,8 @@
 ANTHROPIC_API_KEY=your_api_key_here
 PORT=8000
 ENVIRONMENT=development
+
+# Health Check & Alerting (Optional but recommended)
+# URL endpoint to send alert notifications when health checks fail
+# Should point to a service that sends emails (e.g., CarbTally's /api/alert endpoint)
+ALERT_EMAIL_ENDPOINT=https://carbtally.app/api/alert
